--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,31 +1,78 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Trang chủ</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alfa+Slab+One">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Archivo+Black">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
-    <link rel="stylesheet" href="assets/css/Footer-Clean.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="assets/css/Registration-Form-with-Photo.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style1.css" />
+    <title>Screen Home</title>
 </head>
 
-<body>
-            <p>TRANG CHỦ</p>
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="assets/js/bs-init.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-<script src="assets/js/freelancer.js"></script>
-</body>
+<body style=" ">
+<div class="container">
+    <div class="side">
+        <div class="header">
+            <div class="avatar">
+                <img src="https://images-ssl.gotinder.com/60599dd69433e80100f42c35/172x216_75_b95123e7-454c-4c9f-a71a-a8fe2f40611d.webp"/>
+            </div>
+            <div class="title">Thông tin cá nhân</div>
+        </div>
+        <div class="menu" style="margin-top: 20px;">
+            <ul>
+                <li><a href="l_user" target="pageHome" style="text-decoration:none;">List User</a></li>
+                <li class="active"><a href="add_user" target="pageHome" style="text-decoration:none;">Add User</a></li>
+            </ul>
+        </div>
+        <div class="messages">
+            <div class="avatar">
+                <img src="https://randomuser.me/api/portraits/women/38.jpg" alt="" />
+            </div>
+            <div class="message">
+                <div class="user">Caroline</div>
+                <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing</div>
+            </div>
+        </div>
+        <div class="messages">
+            <div class="avatar">
+                <img src="https://randomuser.me/api/portraits/women/39.jpg" alt="" />
+            </div>
+            <div class="message">
+                <div class="user">Caroline</div>
+                <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing</div>
+            </div>
+        </div>
+        <div class="messages">
+            <div class="avatar">
+                <img src="https://randomuser.me/api/portraits/women/40.jpg" alt="" />
+            </div>
+            <div class="message">
+                <div class="user">Caroline</div>
+                <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing</div>
+            </div>
+        </div>
+        <div class="messages">
+            <div class="avatar">
+                <img src="https://randomuser.me/api/portraits/women/41.jpg" alt="" />
+            </div>
+            <div class="message">
+                <div class="user">Caroline</div>
+                <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing</div>
+            </div>
+        </div>
+        <div class="messages">
+            <div class="avatar">
+                <img src="https://randomuser.me/api/portraits/women/42.jpg" alt="" />
+            </div>
+            <div class="message">
+                <div class="user">Caroline</div>
+                <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing</div>
+            </div>
+        </div>
+    </div>
+    <!--<h1>{{loi}}</h1>-->
+    <div style="width: 999px; height: 975px">
+        <iframe src="l_oStart" name="pageHome" frameborder="0" style="width: 100%; height: 100%;"  ></iframe>
 
+    </div>
+</div>
+</body>
 </html>
