--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,39 +1,17 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Tinder | Hẹn hò, kết bạn và gặp gỡ người mới</title>
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alfa+Slab+One">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Archivo+Black">
-    <link rel="stylesheet" href="fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="fonts/ionicons.min.css">
-    <link rel="stylesheet" href="css/Footer-Clean.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="css/Registration-Form-with-Photo.css">
-    <link rel="stylesheet" href="css/style.css">
-</head>
-
-<body id="page-top">
 <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-secondary text-uppercase" id="mainNav">
     <div class="container"><img class="pulse animated infinite" src="img/logo.png" style="width: 90px;height: 50px;"><a class="navbar-brand js-scroll-trigger" data-bss-hover-animate="rubberBand" href="#page-top">Tinder</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item mx-0 mx-lg-1"></li>
                 <li class="nav-item mx-0 mx-lg-1"><button class="btn btn-primary" data-bss-hover-animate="pulse" type="button" style="background: rgb(44,62,80);border-width: 0;">Tiếng Việt</button></li>
-                <li class="nav-item mx-0 mx-lg-1"><a class="btn btn-primary" role="button" data-bss-hover-animate="pulse" style="border-radius: 10px;height: 40px;border-width: 0px;opacity: 1;background: url(&quot;img/butom.png&quot;);" href="signin.handlebars
+                <li class="nav-item mx-0 mx-lg-1"><a class="btn btn-primary" role="button" data-bss-hover-animate="pulse" style="border-radius: 10px;height: 40px;border-width: 0px;opacity: 1;background: url(&quot;img/butom.png&quot;);" href="signin
 ">Đăng Nhập</a></li>
             </ul>
         </div>
     </div>
 </nav>
 <header style="margin-top: 0;">
-    <h1 style="position: absolute;top: 30%;left: 30%;font-size: 100px;color: #fc6c6c;font-family: 'Abril Fatface', cursive;"><br><strong>SWIPE RIGHT</strong><br><br></h1><img src="img/tinderr.png" style="width: 1518px;"><a class="btn btn-primary" role="button" data-bss-hover-animate="pulse" style="background-image: url(img/butom.png);position: absolute;top: 65%;left: 45%;font-size: 16px;width: 250px;height: 50px;border-radius: 30px;border-width: 0px;" href="signup.handlebars">LẬP TÀI KHOẢN</a>
+    <h1 style="position: absolute;top: 30%;left: 30%;font-size: 100px;color: #fc6c6c;font-family: 'Abril Fatface', cursive;"><br><strong>SWIPE RIGHT</strong><br><br></h1><img src="img/tinderr.png" style="width: 1518px;"><a class="btn btn-primary" role="button" data-bss-hover-animate="pulse" style="background-image: url(img/butom.png);position: absolute;top: 65%;left: 45%;font-size: 16px;width: 250px;height: 50px;border-radius: 30px;border-width: 0px;" href="signup">LẬP TÀI KHOẢN</a>
 </header>
 <section id="portfolio" class="portfolio" style="height: 200px;padding: 40px;">
     <div class="container">
@@ -109,11 +87,3 @@
         </div>
     </footer>
 </div>
-<script src="js/jquery.min.js"></script>
-<script src="bootstrap/js/bootstrap.min.js"></script>
-<script src="js/bs-init.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-<script src="js/freelancer.js"></script>
-</body>
-
-</html>
