--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -25,12 +25,12 @@
         <div class="image-holder"></div>
         <form method="post">
             <h2 class="text-center">Đăng Nhập</h2>
-            <div class="form-group"><input class="form-control" type="email" name="phone" placeholder="Phone"></div>
+            <div class="form-group"><input class="form-control" type="usrname" name="phone" placeholder="Username"></div>
             <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Password"></div>
             <div class="form-group">
                 <div class="form-check"><label class="form-check-label"><input class="form-check-input" type="checkbox">Nhớ tôi</label></div>
             </div>
-            <div class="form-group"><a class="btn btn-primary btn-block" role="button" href="/trangchu">Đăng Nhập</a></div><a class="already" href="signup.handlebars">Bạn chưa có tài khoản?</a>
+            <div class="form-group"><a class="btn btn-primary btn-block" role="button" type="submit" href="/trangchu" >Đăng Nhập</a></div><a class="already" href="signup">Bạn chưa có tài khoản?</a>
         </form>
     </div>
 </div>
