--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -25,14 +25,14 @@
         <div class="image-holder"></div>
         <form method="post">
             <h2 class="text-center">Đăng Kí Tài Khoản</h2>
-            <div class="form-group"><input class="form-control" type="email" name="phone" placeholder="Phone"></div>
+            <div class="form-group"><input class="form-control" type="username" name="username" placeholder="Username"></div>
             <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Email"></div>
-            <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Password"></div>
-            <div class="form-group"><input class="form-control" type="password" name="password-repeat" placeholder="Password (repeat)"></div>
+            <div class="form-group"><input class="form-control" type="password" name="phone" placeholder="Password"></div>
+            <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Password (repeat)"></div>
             <div class="form-group">
                 <div class="form-check"><label class="form-check-label"><input class="form-check-input" type="checkbox">Tôi đồng ý với các điều khoản cấp phép<br></label></div>
             </div>
-            <div class="form-group"><a class="btn btn-primary btn-block" role="button" href="home">ĐĂNG KÍ</a></div><a class="already" href="signin.handlebars">Bạn đã có tài khoản? đăng nhập tại đây.</a>
+            <div class="form-group"><a class="btn btn-primary btn-block" role="button" href="signin" type="submit">ĐĂNG KÍ</a></div><a class="already" href="signin">Bạn đã có tài khoản? đăng nhập tại đây.</a>
         </form>
     </div>
 </div>
