--- a/views/addUser.handlebars
+++ b/views/addUser.handlebars
@@ -19,7 +19,7 @@
     <div class="inputDivUser">
         Họ và tên : <input name="name"  placeholder="Name" class="inputUser"></div>
 
-    <div class="inputDivUser"> User name : <input name="Username"  placeholder="user name" class="inputUser"></div>
+    <div class="inputDivUser"> User name : <input name="username"  placeholder="user name" class="inputUser"></div>
 
     <div class="inputDivUser"> Age : <input name="age" placeholder="Age" class="inputUser"></div>
 
